# gamekit

./: .clang-format  .clangd.in  .gitignore  .ignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  build-csharp.sh  build-docs.bat  build-docs.sh  build.bat  build.sh  clean.bat  clean.sh  config.bat  config.sh  test.bat  test.sh
cmake/: Clangd.cmake  Commands.cmake  Dependencies.cmake  Projects.cmake  Settings.cmake  Versioning.cmake  bindings.cmake  clangd.cmake  dependencies.cmake  doxygen.cmake  projects.cmake  settings.cmake  versioning.cmake
csharp/: CMakeLists.txt  Gamekit.Posix.csproj  Gamekit.Win64.csproj  README.md  gamekit.sln
csharp/Gamekit/: Gamekit.Posix.csproj  Gamekit.Win64.csproj  Platform.cs
csharp/GamekitTests/: GamekitTests.Posix.csproj  GamekitTests.Win64.csproj
csharp/src/: IHandleContainer.cs  NativeHandle.cs  NativeObject.cs  NativeResource.cs  Platform.cs
csharp/tests/: GamekitTests.Posix.csproj  GamekitTests.Win64.csproj  UnitTest1.cs
docs/: annotated.html  classes.html  dir_124f62213908ea83a81dabad350e689a.html  dir_124f62213908ea83a81dabad350e689a_dep.dot  dir_124f62213908ea83a81dabad350e689a_dep.md5  dir_47b65c63817b0c57dcd6cd77eca8623e.html  dir_47b65c63817b0c57dcd6cd77eca8623e_dep.md5  dir_4c23a4caed935f156fec3ec9f4d2d3b8.html  dir_4c23a4caed935f156fec3ec9f4d2d3b8_dep.dot  dir_4e3e6b1c778910f01f34722991eea315.html  dir_4e3e6b1c778910f01f34722991eea315_dep.md5  dir_6e4fd1889f18c882f6ced8d59d960e25.html  dir_6e4fd1889f18c882f6ced8d59d960e25_dep.md5  dir_9c3cccfd4e85ebbe54ef57737f63bc4b.html  dir_9c3cccfd4e85ebbe54ef57737f63bc4b_dep.dot  dir_a5e97b8b86b5dc42c49bedc079869e11.html  dir_a5e97b8b86b5dc42c49bedc079869e11_dep.dot  dir_a8df474c10912ec33c14c38f1f023ff4.html  dir_a8df474c10912ec33c14c38f1f023ff4_dep.dot  dir_a8df474c10912ec33c14c38f1f023ff4_dep.md5  dir_b055ab6849831684cd1b1b294e3760d6.html  dir_b055ab6849831684cd1b1b294e3760d6_dep.md5  dir_cc44dcbbaab40f6a2e072b76bd736499.html  dir_cc44dcbbaab40f6a2e072b76bd736499_dep.dot  dir_cf7b9bb1af36646a0f0f7fade7377339.html  dir_cf7b9bb1af36646a0f0f7fade7377339_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d615da9a6107092d61e9dbc4037864d1.html  dir_d615da9a6107092d61e9dbc4037864d1_dep.md5  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  (+6 more)
docs/d0/d18/: classgamekit_1_1systems_1_1inventory_1_1BaseInventory__inherit__graph.md5
docs/d0/d84/: gamekit__api__common_8h_source.html
docs/d0/d88/: classgamekit_1_1systems_1_1inventory_1_1dynamic__inventory_1_1_dynamic_inventory_settings-members.html
docs/d0/dd2/: classgamekit_1_1systems_1_1inventory_1_1static__inventory_1_1_static_inventory__inherit__graph.dot
docs/d0/dd4/: classgamekit_1_1systems_1_1inventory_1_1_base_inventory-members.html
docs/d0/de5/: classgamekit_1_1systems_1_1inventory_1_1static__inventory_1_1_static_inventory_settings.html  classgamekit_1_1systems_1_1inventory_1_1static__inventory_1_1_static_inventory_settings_aba30d538ac41a90fbee639d906c240c1_cgraph.dot
docs/d1/d31/: classgamekit_1_1core_1_1IKitObject.html
docs/d1/d63/: static__inventory__slot_8h_source.html
docs/d1/d98/: dynamic__inventory__api_8h_source.html
docs/d1/ddc/: base__inventory_8h_source.html
docs/d1/de8/: base__inventory__slot__api_8h_source.html
docs/html/: dir_124f62213908ea83a81dabad350e689a.html  dir_4c23a4caed935f156fec3ec9f4d2d3b8.html  dir_4c23a4caed935f156fec3ec9f4d2d3b8_dep.md5  dir_9c3cccfd4e85ebbe54ef57737f63bc4b_dep.md5  dir_a5e97b8b86b5dc42c49bedc079869e11_dep.md5  dir_a8df474c10912ec33c14c38f1f023ff4.html  dir_cc44dcbbaab40f6a2e072b76bd736499.html  dir_cc44dcbbaab40f6a2e072b76bd736499_dep.md5  doxygen_crawl.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  inherit_graph_1.md5  inherit_graph_4.md5  inherit_graph_5.md5  inherits.html  menudata.js
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js
include/gamekit/: copyright.h  gamekit.h  gamekit_api.h  gamekit_api_common.h  igameobject.h  ilogutils.h  ivalidator.h  version.h.in
include/gamekit_api/: gamekit_api.h  gamekit_api_common.h  gamekit_api_handles.h
src/: CMakeLists.txt  cgameobject.cpp  dynamic_inventory.cpp  dynamic_inventory_api.cpp  gamekit.cpp  iinventory.cpp
src/api/systems/inventory/: base_inventory_api.cpp  base_inventory_settings_api.cpp  base_inventory_slot_api.cpp
src/api/systems/inventory/dynamic_inventory/: dynamic_inventory_api.cpp  dynamic_inventory_settings_api.cpp  dynamic_inventory_slot_api.cpp
src/api/systems/inventory/static_inventory/: static_inventory_api.cpp  static_inventory_settings_api.cpp  static_inventory_slot_api.cpp
src/gamekit/: gamekit.cpp
src/gamekit/gameplay/inventory/: base_inventory.cpp  base_inventory_settings.cpp  base_inventory_slot.cpp
src/gamekit/gameplay/inventory/dynamic_inventory/: dynamic_inventory.cpp  dynamic_inventory_settings.cpp  dynamic_inventory_slot.cpp
src/gamekit/gameplay/inventory/static_inventory/: static_inventory.cpp  static_inventory_settings.cpp  static_inventory_slot.cpp
src/gamekit/systems/inventory/: base_inventory.cpp  base_inventory_settings.cpp  base_inventory_slot.cpp
src/gamekit/systems/inventory/dynamic_inventory/: dynamic_inventory.cpp  dynamic_inventory_settings.cpp  dynamic_inventory_slot.cpp
src/gamekit/systems/inventory/static_inventory/: static_inventory.cpp  static_inventory_settings.cpp  static_inventory_slot.cpp
src/systems/inventory/dynamic_inventory/: dynamic_inventory_api.cpp
tests/: CMakeLists.txt  base_inventory_unittest.cpp  gamekit_test.cpp  inventory_unittest.cpp  static_inventory_unittest.cpp
(+272 files in other folders)
